# Paean-old

./: CMakeLists.txt
cmake/: FindCUB.cmake
include/: bin.h  bin_assign_kernel.cuh  bin_calc_kernel.cuh  bisect.cuh  clock.h  cuda_util.h  fusion.h  incgammabeta.cuh  parse.h  sort.cuh  util.h
input/: length_table.csv
src/: fusion.cpp  gene.cu  parse.cpp  prepare.cpp  sort.cu
